fix: Partner news redirection, textblock overflow

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -863,15 +863,13 @@
         flex-direction: column;
         gap: 8px;
     }
-    &__iframe {
-        pointer-events: none;
-        overflow:hidden;
+    &__partner-site {
         display: block;
-        width: 100%;
-        height: 1000px;
-        margin-bottom: 80px;
-        scrollbar-width: none;
-        scroll-snap-type: none;
+        height: 736px;
+        background-attachment: fixed;
+        background-position: center 64px;
+        background-size: cover;
+        background-repeat: no-repeat;
     }
 
     & + .publication {
