--- a/src/scss/components/global/text.scss
+++ b/src/scss/components/global/text.scss
@@ -51,6 +51,7 @@
 
     &--text-block {
         line-height: 1.7;
+        overflow-wrap: break-word;
 
         h1, h2, h3, h4, h5, h6, p, ul, ol, img, blockquote {
             margin-bottom: 24px;
